# at_polis

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy-lexicons.yml
docs/: _config.yml  index.html
docs/com/crown-shy/testing/: poll.json  statement.json
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css
frontend/src/lib/api/: client.ts
frontend/src/lib/components/ui/: Button.svelte  Card.svelte  Input.svelte  Textarea.svelte
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/oauth/callback/: +page.svelte
frontend/src/routes/poll/[uri]/[cid]/: +page.svelte  +page.ts
frontend/src/routes/polls/: +page.svelte  +page.ts
frontend/src/routes/polls/create/: +page.svelte
lexicons/: vote.json
lexicons/scot/comhairle/: testingPolisPollV1.json  testingPolisStatementV1.json  testingPolisVoteV1.json
src/: auth.rs  db.rs  jetstream.rs  lexicon.rs  lib.rs  main.rs  models.rs  oauth2.rs
